# 2026-consensus-clustering-vkr

./: .claudeignore  .gitignore  ANALYSIS_RUNBOOK.md  DEPLOY_RENDER.md  README.md  _smoke.py  app.py  check_test.py  pyproject.toml  render.yaml  requirements.txt  run_sdgca_linkage_suite.bat  test_ai.py
ai_agent/: client.py
consensus_lab/: algorithms_base.py  analyze_benchmark_results.py  base_clusterings.py  compare_preprocessing_modes.py  consensus_runner.py  dataset_diagnostics.py  densired_style_generator.py  ensemble_selection.py  generate_analysis_datasets.py  generate_sdgca_analysis_plots.py  hierarchical_consensus.py  hierarchical_consensus_modified.py  interpretation_agent.py  io_utils.py  metrics.py  qiu_joe_style_generator.py  repliclust_style_generator.py  run_full_analysis_suite.py  run_hierarchical_linkage_suite.py  sdgca.py  sdgca_modified.py  sdgca_tuner.py  simple_dataset_generator.py  smart_recommender.py  statistical_tests.py  statistical_tests_numpy.py
datasets/: custom_densired_dataset.npz  densired_compact_hard.npz  densired_mix_hard.npz  densired_stretched_hard.npz  repliclust_heterogeneous_hard.npz  repliclust_highdim_hard.npz  repliclust_oblong_overlap.npz  web_multi_page_smoke.npz  web_smoke_dataset.npz  web_ui_smoke.npz
docs/: PROJECT_STRUCTURE.md  README.md  contribution.md  limitations.md  massive_experiment_protocol.md  qd_selection_experiments.md  sdgca_modified_ablation.md  structure_plan.md  thesis_outline.md
experiments/: README.md  analyze_single_vs_consensus.py  benchmark_real_datasets.py  benchmark_sdgca_v2.py  download_biomedical_datasets.py  generate_design_datasets.py  generate_massive_synthetic_suite.py  merge_designed_experiment_results.py  plot_results.py  run_complexity_benchmark.py  run_comprehensive_benchmark.py  run_default_vs_tuned.py  run_designed_qd_experiment.py  run_exp3to6.py  run_exp4to6_fast.py  run_exp4to6_v2.py  run_full_report_experiments.py  run_qd_selection_analysis.py  run_runs_stability.py  run_sdgca_modified_ablation.py  run_single_vs_consensus_benchmark.py  run_statistical_analysis.py  select_consensus_hyperparameters.py
python_port/: benchmark.py  densired_style_generator.py  generate_sdgca_analysis_plots.py  (+7 more)
(+117 files in other folders)
